# FileOrganizer

./: .gitignore  CMakeLists.txt  README.txt  requirements.txt
html/: _main_window_8cpp.html  _main_window_8h.html  _main_window_8h_source.html  _ollama_client_8cpp.html  _ollama_client_8h.html  _ollama_client_8h_source.html  _prompt_builder_8cpp.html  _prompt_builder_8h.html  _prompt_builder_8h.js  _prompt_builder_8h_source.html  _script_runner_8cpp.html  _script_runner_8h.html  _script_runner_8h.js  _script_runner_8h_source.html  annotated.html  annotated_dup.js  class_main_window-members.html  class_main_window.html  class_ollama_client-members.html  class_ollama_client.html  class_ollama_client.js  class_prompt_builder-members.html  class_prompt_builder.html  class_script_runner-members.html  class_script_runner.html  class_script_runner.js  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  doxygen_crawl.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_func.html  hierarchy.html  hierarchy.js  (+7 more)
html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_8.js  all_9.js  all_a.js  all_b.js  all_d.js  all_e.js  classes_1.js  classes_2.js  classes_3.js  files_2.js  files_3.js  functions_2.js  functions_6.js  functions_7.js  functions_8.js  searchdata.js  variables_1.js  variables_3.js  variables_4.js  variables_5.js
include/: MainWindow.h  OllamaClient.h  PromptBuilder.h  ScriptRunner.h
src/: MainWindow.cpp  OllamaClient.cpp  PromptBuilder.cpp  ScriptRunner.cpp  main.cpp
tests/: test_PromptBuilder.cpp  test_ScriptRunner.cpp
